re #1317 -Created new algorithm for MyDataSearch which gives the investigations for the logged in user. DownloadingDataFile  algorithm has changed to download all the selected files and search algorithm has changed to add search by keyword and search by start and end dates.

--- a/Code/Mantid/ICat/ICat.vcproj
+++ b/Code/Mantid/ICat/ICat.vcproj
@@ -211,6 +211,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\src\MyDataSearch.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\src\SearchByRunNumber.cpp"
 				>
 			</File>
@@ -281,6 +285,10 @@
 				</File>
 				<File
 					RelativePath=".\inc\MantidICat\Logout.h"
+					>
+				</File>
+				<File
+					RelativePath=".\inc\MantidICat\MyDataSearch.h"
 					>
 				</File>
 				<File
