Added dialog box for editing user defined functions. re #971

--- a/Code/Mantid/Algorithms/Algorithms.vcproj
+++ b/Code/Mantid/Algorithms/Algorithms.vcproj
@@ -311,6 +311,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\src\FFTSmooth2.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\src\FindCenterOfMassPosition.cpp"
 				>
 			</File>
@@ -782,6 +786,10 @@
 			</File>
 			<File
 				RelativePath=".\inc\MantidAlgorithms\FFTSmooth.h"
+				>
+			</File>
+			<File
+				RelativePath=".\inc\MantidAlgorithms\FFTSmooth2.h"
 				>
 			</File>
 			<File
