Incorporate numpy bindings into Mantid's PythonAPI. If numpy is installed the MatrixWorkspace read functions return a numpy.ndarray wrapped around the existing data structure such that the data is not copied any more. Re #948

--- a/Code/Mantid/PythonAPI/PythonAPI.vcproj
+++ b/Code/Mantid/PythonAPI/PythonAPI.vcproj
@@ -192,6 +192,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\src\MantidVecHelper.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\src\PyAlgorithmWrapper.cpp"
 				>
 			</File>
@@ -227,6 +231,10 @@
 			</File>
 			<File
 				RelativePath=".\inc\MantidPythonAPI\kernel_exports.h"
+				>
+			</File>
+			<File
+				RelativePath=".\inc\MantidPythonAPI\MantidVecHelper.h"
 				>
 			</File>
 			<File
