--- a/Code/Mantid/SConstruct
+++ b/Code/Mantid/SConstruct
@@ -144,7 +144,9 @@ if os.name == 'nt':
     env.Append(CPPDEFINES = ['_SCL_SECURE_NO_WARNINGS', '_CRT_SECURE_NO_WARNINGS', '_CRT_SECURE_NO_DEPRECATE', '_CRT_NONSTDC_NO_DEPRECATE', '_SCL_SECURE_NO_DEPRECATE'])
     env.Append(CPPDEFINES = [('MS_VISUAL_STUDIO','1'), ('WINVER','0x0500')])
     env.Append(CPPDEFINES = ['BOOST_ALL_DYN_LINK','NOMINMAX','_USE_MATH_DEFINES', 'WNT'])
-    env.Append(CPPDEFINES = ['WIN32', '_WINDOWS', 'POCO_DLL', 'GSL_DLL'])
+    # MG: Even though MSVC defines "_WIN32" gsl checks for "WIN32" and Poco checks for "_WINDOWS" hence the additional defines.
+    # We should stick to the standard _WIN32 check though as this is guaranteed to be defined by the MSVC compiler
+    env.Append(CPPDEFINES = ['WIN32','_WINDOWS', 'POCO_DLL', 'GSL_DLL'])
     if int(debug) :
         cflags = [ '/W3', '/Od', '/FD', '/EHsc', '/MDd', '/TP',  ]
         cflags.extend([ '/wd4275', '/wd4996'])
