--- a/Code/RPM_Kit/mantid.spec.template
+++ b/Code/RPM_Kit/mantid.spec.template
@@ -101,7 +101,7 @@ install -m755 Code/Mantid/release/libQtPropertyBrowser.so $RPM_BUILD_ROOT/%{mant
 install -m755 Code/Mantid/Build/Plugins/*.so $RPM_BUILD_ROOT/%{mantidpluginsdir}
 for i in Code/Mantid/release/*.so; do
     case `basename $i` in
-	libMantidAlgorithms.so | libMantidCurveFitting.so | libMantidDataHandling.so | libMantidDataObjects.so | libMantidNexus.so )
+	libMantidAlgorithms.so | libMantidCurveFitting.so | libMantidDataHandling.so | libMantidDataObjects.so | libMantidNexus.so | libMantidICat.so )
 	    install -m755 $i $RPM_BUILD_ROOT/%{mantidpluginsdir}
 	    ;;
 	*)
