Better checks for missing logs. re #974

--- a/Code/Mantid/CurveFitting/CurveFitting.vcproj
+++ b/Code/Mantid/CurveFitting/CurveFitting.vcproj
@@ -505,6 +505,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\test\PlotPeakByLogValueTest.h"
+				>
+			</File>
+			<File
 				RelativePath=".\inc\MantidCurveFitting\PRConjugateGradientMinimizer.h"
 				>
 			</File>
