Update VS project files to include BOOST_ALL_DYN_LINK define so that boost is linked dynamically rather than statically. Re #100

--- a/Code/Mantid/API/API.vcproj
+++ b/Code/Mantid/API/API.vcproj
@@ -255,6 +255,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\src\IEventWorkspace.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\src\IFunction.cpp"
 				>
 			</File>
@@ -548,6 +552,10 @@
 			</File>
 			<File
 				RelativePath=".\inc\MantidAPI\IDataItem.h"
+				>
+			</File>
+			<File
+				RelativePath=".\inc\MantidAPI\IEventWorkspace.h"
 				>
 			</File>
 			<File
