re #1495 - LoadGSS algorithm to load files saved by SaveGSS -- there is some data loss in the SaveGSS that I'm unable to correct for

--- a/Code/Mantid/DataHandling/DataHandling.vcproj
+++ b/Code/Mantid/DataHandling/DataHandling.vcproj
@@ -253,6 +253,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\src\LoadGSS.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\src\LoadInstrument.cpp"
 				>
 			</File>
@@ -508,6 +512,10 @@
 			</File>
 			<File
 				RelativePath=".\inc\MantidDataHandling\LoadEventPreNeXus.h"
+				>
+			</File>
+			<File
+				RelativePath=".\inc\MantidDataHandling\LoadGSS.h"
 				>
 			</File>
 			<File
